# object-validation

./: .gitignore  .travis.yml  README.md  pyproject.toml
object_validation/: datastructures.py  exceptions.py  fields.py  models.py
tests/: test_datastructures.py  test_fields.py  test_model.py
