[tool.poetry]
name = "object-validation"
version = "0.1.0"
description = ""
authors = ["Andrii Makysmov <maximov.echo@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pylint = "^2.5.0"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
